fix: popup z-index

--- a/src/assets/style/custom.less
+++ b/src/assets/style/custom.less
@@ -176,7 +176,7 @@ div#driver-highlighted-element-stage {
 }
 
 .arco-trigger-popup {
-  z-index: 500 !important;
+  // z-index: 500 !important;
 }
 // modal
 .arco-modal {
